plugins {
    id 'java'
}

group 'com.kodilla'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

//dependencies {
//    testCompile group: 'junit', name: 'junit', version: '4.12'
//}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}

//tasks.withType(Test) {
//    useJUnitPlatform()
//    jvmArgs '--enable-preview'
//}
test {
    useJUnitPlatform()
}
